--- a/TravelB/src/main/resources/application.properties
+++ b/TravelB/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.mvc.servlet.path=/
 server.servlet.context-path=/travel
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.resources.static-locations= classpath:/resources/
+spring.resources.cache-period=0
