--- a/TravelB/src/main/resources/application.properties
+++ b/TravelB/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.datasource.password=root
 spring.mvc.servlet.path=/
 server.servlet.context-path=/travel
 
-
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
