--- a/TravelB/src/main/resources/application.properties
+++ b/TravelB/src/main/resources/application.properties
@@ -6,3 +6,11 @@ spring.mvc.servlet.path=/
 server.servlet.context-path=/travel
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# Session and Redis 設定
+spring.session.store-type=redis
+server.servlet.session.timeout=-1s
+spring.redis.host=localhost
+spring.redis.password=root
+spring.redis.port=6379
+
