--- a/TravelB/src/main/resources/application.properties
+++ b/TravelB/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.mvc.servlet.path=/
 server.servlet.context-path=/travel
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jackson.time-zone=GMT+8
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 
 # Session and Redis 設定
 spring.session.store-type=redis
